Bug 1734853 - Ensure unhinted fonts default to symmetric rendering in Skia. r=jfkthame

It would seem that the Microsoft implementation of GetRecommendedRenderingMode
is somewhat different from the WINE version and has further behavior of also
checking whether the font is hinted in the fallback case to determine if it
should truly default to natural rendering instead of natural symmetric. This
adds the hinting check to decide between natural or natural symmetric in that
fallback case.

Differential Revision: https://phabricator.services.mozilla.com/D129360